Agrego clear para Linux.